--- a/views/index.pug
+++ b/views/index.pug
@@ -21,6 +21,7 @@ block contents
         ul.article-list
           li index.html
           li 这是 pug 渲染出来的首页
+          li!= '首页<strong><转移></strong>'
           //- each info in artList
           //-   li
           //-     a.list-face
